Mr Valentine's Portfolio

--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
                                     </div>
                                     
                                 </div>
-                                <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end">
+                                <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end" id="submit-btn">
                                     <a href="">
                                         <button type="submit" class="rounded-2 py-2 px-4 border-0" style="background-color: #0E1520; color: white; font-size: 12px;">Let’s Connect</button>
                                     </a>
@@ -190,6 +190,8 @@
             </div>
         </div>
     </main>
+
+    <div id="response-message"></div>
 
     <footer>
         <div class="d-none d-md-flex justify-content-end">
