--- a/services.html
+++ b/services.html
@@ -21,8 +21,8 @@
         
                 <div class="d-none col-lg-6 d-lg-flex">
                     <ul class="d-flex gap-5 p-0 m-0" id="top-nav">
-                        <li><a href="/home.html">Home </a></li>
-                        <li><a href="/index.html">About </a></li>
+                        <li><a href="/index.html">Home </a></li>
+                        <li><a href="/about.html">About </a></li>
                         <li><a href="/works.html">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
                         <li><a href="/contact.html">Contact</a></li>
@@ -31,8 +31,8 @@
 
                 <div class="d-block col-4 col-md-6 d-lg-none text-end links">
                     <ul class="p-0 m-0" id="lists">
-                        <li><a href="/home.html">Home </a></li>
-                        <li><a href="/index.html">About </a></li>
+                        <li><a href="/index.html">Home </a></li>
+                        <li><a href="/about.html">About </a></li>
                         <li><a href="/works.html">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
                         <li><a href="/contact.html">Contact</a></li>
@@ -161,8 +161,8 @@
                 </div>
                 <div class=" d-none col-lg-6 d-lg-block">
                     <ul class="d-flex gap-5">
-                        <li><a href="/home.html">Home</a></li>
-                        <li><a href="/index.html">About</a></li>
+                        <li><a href="/index.html">Home </a></li>
+                        <li><a href="/about.html">About </a></li>
                         <li><a href="/works.html">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
                         <li><a href="/contact.html">Contact</a></li>
