Mr Valentine's Portfolio

--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <h5>My journey in Design: </h5>
-                            <p><img src="/images/skills-dot.svg" alt="">   I discovered my passion for design [number] years ago, focusing on solving problems through creative solutions. My journey has allowed me to work on diverse projects, continually refining my skills in UI/UX.</p>
+                            <p><img src="/images/skills-dot.svg" alt="">   I discovered my passion for design 2 years ago, focusing on solving problems through creative solutions. My journey has allowed me to work on diverse projects, continually refining my skills in UI/UX.</p>
                         </div>
                         <hr class="p-0 m-0 d-none d-md-block" style="border: 3px solid #3958864D;">
                     </div>
@@ -238,9 +238,9 @@
                         <div class="card-body">
                           <h5 class="card-title">Meccafarms</h5>
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
-                          <a href="https://drive.google.com/drive/folders/1NjwSaLGBNDkQxNuH3CqGRqOew5cnNlgA?usp=drive_link" class="btn btn-primary border-0">
+                          <a href="https://drive.google.com/drive/folders/1NjwSaLGBNDkQxNuH3CqGRqOew5cnNlgA?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
                                 <img src="/images/view-project-icon.svg" alt=""  style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -253,9 +253,9 @@
                         <div class="card-body">
                           <h5 class="card-title">Up Habit</h5>
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
-                          <a href="https://drive.google.com/drive/folders/1k9-TPFNF3_RafRCxaqTBn_O9xEtybgoQ?usp=drive_link" class="btn btn-primary border-0">
+                          <a href="https://drive.google.com/drive/folders/1k9-TPFNF3_RafRCxaqTBn_O9xEtybgoQ?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
                                 <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -268,9 +268,9 @@
                         <div class="card-body">
                           <h5 class="card-title">Wearluxe App</h5>
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
-                          <a href="https://drive.google.com/drive/folders/1Jw7D5H9yFjIiMA7mh6gjyoD7DAVy0o7S?usp=drive_link" class="btn btn-primary border-0">
+                          <a href="https://drive.google.com/drive/folders/1Jw7D5H9yFjIiMA7mh6gjyoD7DAVy0o7S?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
                                 <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -278,9 +278,9 @@
                     </div>
                 </div>
                 <div class="col-12 d-flex justify-content-center" style="margin-top: 50px;">
-                    <a href="/works.html" class="btn btn-primary border-0">
+                    <a href="/works.html" class="btn btn-primary py-2 border-0">
                         <div class="d-flex gap-3 align-items-center">
-                            <p class="p-0 m-0">View All projects </p>
+                            <p class="p-0 m-0" style="font-size: 13px;">View All projects </p>
                             <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                         </div>
                     </a>
@@ -296,9 +296,9 @@
     
         <div class="col-12 text-center">
             <div id="work-together">
-                <p style=" margin-top: -200px;">Let’s Work Together</p>
+                <p style=" margin-top: -200px;" class="pt-5">Let’s Work Together</p>
                 <a href="/contact.html"><img src="/images/arrow-up-background.svg" alt="" height="50px"></a>
-                <a href="/contact.html"><img src="/images/arrow-up.svg" alt="" height="17px" class="img"></a>
+                <a href="/contact.html"><img src="/images/arrow-up.svg" alt="" height="15px" class="img-about"></a>
             </div>
             
         </div>
