--- a/services.html
+++ b/services.html
@@ -131,19 +131,19 @@
 
     <div style="margin-bottom: 80px;">
         <div class="col-12 d-flex justify-content-start">
-            <img src="/images/blur-right.svg" alt="" height="250px">
+            <img src="/images/blur-right.svg" alt="" height="200px">
         </div>
     
         <div class="col-12 text-center">
             <div id="work-together">
                 <p style=" margin-top: -200px;">Let’s Work Together</p>
                 <a href="/contact.html"><img src="/images/arrow-up-background.svg" alt="" height="50px"></a>
-                <a href="/contact.html"><img src="/images/arrow-up.svg" alt="" height="17px" class="img"></a>
+                <a href="/contact.html"><img src="/images/arrow-up.svg" alt="" height="15px" class="img-services"></a>
             </div>
             
         </div>
         <div class="col-12 d-flex justify-content-end">
-            <img src="/images/blur-left.svg" alt="" height="250px" style="margin-top: -200px;">
+            <img src="/images/blur-left.svg" alt="" height="200px" style="margin-top: -200px;">
         </div>
     </div>
     <hr>
