--- a/works.html
+++ b/works.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row lastrow-works">
                 <div class="d-none d-md-block col-md-6  mt-5">
                     <img src="/images/Mecca farms.png" alt="" height="180px">
                     <div class="mt-3"><img src="/images/Star 1.png" alt=""></div>
@@ -172,8 +172,9 @@
             <img src="/images/layer-blur-vector.png" alt="" height="30px" style="margin-top: -1650px;">
         </div>
     </section>
+    <hr>
 
-    <footer style="padding-top: 60px;">
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
