--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Valentine || UI/UX Designer</title>
+    <link rel="icon" href="/images/logo.svg">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -23,7 +24,7 @@
                 <div class="d-none d-md-none col-lg-6 d-lg-flex">
                     <ul class="d-flex gap-5 p-0 m-0" id="top-nav">
                         <li><a href="/index.html">Home </a></li>
-                        <li><a href="/about.html">About </a></li>
+                        <li><a href="/about.html" class="active">About </a></li>
                         <li><a href="/works.html">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
                         <li><a href="/contact.html">Contact</a></li>
