--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Valentine || UI/UX Designer</title>
+    <link rel="icon" href="/images/logo.svg">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -24,7 +25,7 @@
                         <li><a href="/index.html">Home </a></li>
                         <li><a href="/about.html">About </a></li>
                         <li><a href="/works.html">Works</a></li>
-                        <li><a href="/services.html">Services</a></li>
+                        <li><a href="/services.html" class="active">Services</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -53,7 +54,7 @@
             </div>
         </div>
     </header>
-    <section style="margin-top: 80px;">
+    <section style="margin-top: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6 offset-lg-3 text-center" id="about-me-position">
