Mr Valentine's Portfolio

--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
                                     </div>
                                     
                                 </div>
-                                <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end">
+                                <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end" id="submit-btn-parent">
                                     
                                     <a href="#response-message">
                                         <button type="submit" class="rounded-2 py-2 px-4 border-0" style="background-color: #0E1520; color: white; font-size: 12px;" id="submit-btn">Let’s Connect</button>
