Mr Valentine's Portfolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div class="d-block col-4 col-md-6 d-lg-none text-end links">
                     <ul class="p-0 m-0" id="lists">
-                        <li><a href="/index.html">Home </a></li>
+                        <li><a href="/index.html" class="active">Home </a></li>
                         <li><a href="/about.html">About </a></li>
                         <li><a href="/works.html">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
