--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                         <li><a href="/about.html">About </a></li>
                         <li><a href="/works.html">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/contact.html" class="active">Contact</a></li>
                     </ul>
                 
                     <div class="d-flex justify-content-end">
