--- a/works.html
+++ b/works.html
@@ -32,7 +32,7 @@
                     <ul class="p-0 m-0" id="lists">
                         <li><a href="/index.html">Home </a></li>
                         <li><a href="/about.html">About </a></li>
-                        <li><a href="/works.html">Works</a></li>
+                        <li><a href="/works.html" class="active">Works</a></li>
                         <li><a href="/services.html">Services</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
