Mr Valentine's Portfolio

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-6 first-row">
                             <h5>Skills:</h5>
-                            <p><img src="/images/skills-dot.svg" alt="">   I specialize in user-centered design, focusing on creating intuitive interfaces. Proficient in Figma, Adobe XD, and Sketch, I excel at wireframing, prototyping, and user testing. My experience with design systems ensures consistency across digital platforms.</p>                        
+                            <p><img src="/images/skills-dot.svg" alt="">   I specialize in user-centered design, focusing on creating intuitive interfaces. Proficient in <a href="">Figma, Adobe XD,</a> and <a href="">Sketch</a>, I excel at <a href="">wireframing, prototyping, and user testing</a>. My experience with design systems ensures consistency across digital platforms.</p>                       
                         </div>
                         <div class="col-12 col-md-6">
                             <h5>My journey in Design: </h5>
@@ -229,7 +229,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h4>Here’s a glimpse of some exciting projects I’ve done  </h4>
+                    <h4>Here are  glimpses of some exciting projects I’ve done  </h4>
                 </div>
             </div>
             <div class="row">
@@ -241,7 +241,7 @@
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
                           <a href="https://drive.google.com/drive/folders/1NjwSaLGBNDkQxNuH3CqGRqOew5cnNlgA?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View project</p>
                                 <img src="/images/view-project-icon.svg" alt=""  style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -256,7 +256,7 @@
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
                           <a href="https://drive.google.com/drive/folders/1k9-TPFNF3_RafRCxaqTBn_O9xEtybgoQ?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View project</p>
                                 <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -271,7 +271,7 @@
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
                           <a href="https://drive.google.com/drive/folders/1Jw7D5H9yFjIiMA7mh6gjyoD7DAVy0o7S?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View project</p>
                                 <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -281,7 +281,7 @@
                 <div class="col-12 d-flex justify-content-center" style="margin-top: 50px;">
                     <a href="/works.html" class="btn btn-primary py-2 border-0">
                         <div class="d-flex gap-3 align-items-center">
-                            <p class="p-0 m-0" style="font-size: 13px;">View All projects </p>
+                            <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View All projects </p>
                             <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                         </div>
                     </a>
@@ -297,7 +297,7 @@
     
         <div class="col-12 text-center">
             <div id="work-together">
-                <p style=" margin-top: -200px;" class="pt-5">Let’s Work Together</p>
+                <p style=" margin-top: -200px;" class="pt-5">Let’s Work T<img src="/images/BG1I-removebg-preview 1.png" alt="" style="height: 25px; width: 25px; border-radius: 50%; border: 5px solid #2C3E50;">gether</p>
                 <a href="/contact.html"><img src="/images/arrow-up-background.svg" alt="" height="50px"></a>
                 <a href="/contact.html"><img src="/images/arrow-up.svg" alt="" height="15px" class="img-about"></a>
             </div>
