--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <div class="col-12 col-lg-6">
                     <div class="d-flex text-lg-start Introduction-writeup align-items-center">
                         <img src="/images/hand-vector.png" alt="" height="40">
-                        <h1 class="p-0 m-0">Hi there, It’s Godwin Valentine. </h1>
+                        <h1 class="p-0 m-0" style="font-family: Montserrat;">Hi there, It’s Godwin Valentine. </h1>
                     </div>
-                    <p class="d-none d-lg-block introduction-paragraph"> I’m Godwin Valentine, a UI/UX designer who’s all about making things look awesome and actually work for people. I love figuring out how design can solve real problems and make life a little easier. Welcome to my creative space—let’s build something great together!</p>
-                    <a href="/contact.html" id="btn-parent" class="d-none d-lg-block mt-4">
+                    <p class="d-none d-lg-block introduction-paragraph" style="font-family: Roboto;"> I’m Godwin Valentine, a UI/UX designer who’s all about making things look awesome and actually work for people. I love figuring out how design can solve real problems and make life a little easier. Welcome to my creative space—let’s build something great together!</p>
+                    <a href="/contact.html" id="btn-parent-2-desktop" class="d-none d-lg-block mt-4">
                         <button class="flex-end rounded-2 py-2 ps-2 pe-4 border-0">Let’s Connect</button>
                         <img src="/images/people-btn.svg" alt="" id="people-img">
                     </a>
@@ -129,7 +129,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-6 first-row">
                             <h5>Skills:</h5>
-                            <p><img src="/images/skills-dot.svg" alt="">   I specialize in user-centered design, focusing on creating intuitive interfaces. Proficient in Figma, Adobe XD, and Sketch, I excel at wireframing, prototyping, and user testing. My experience with design systems ensures consistency across digital platforms.</p>                        
+                            <p><img src="/images/skills-dot.svg" alt="">   I specialize in user-centered design, focusing on creating intuitive interfaces. Proficient in <a href="">Figma, Adobe XD,</a> and <a href="">Sketch</a>, I excel at <a href="">wireframing, prototyping, and user testing</a>. My experience with design systems ensures consistency across digital platforms.</p>                        
                         </div>
                         <div class="col-12 col-md-6">
                             <h5>My journey in Design: </h5>
@@ -242,7 +242,7 @@
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
                           <a href="https://drive.google.com/drive/folders/1NjwSaLGBNDkQxNuH3CqGRqOew5cnNlgA?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View project</p>
                                 <img src="/images/view-project-icon.svg" alt=""  style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -257,7 +257,7 @@
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
                           <a href="https://drive.google.com/drive/folders/1k9-TPFNF3_RafRCxaqTBn_O9xEtybgoQ?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View project</p>
                                 <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -272,7 +272,7 @@
                           <p class="card-text">Designed a health and fitness app for women , with different and exciting features in the app</p>
                           <a href="https://drive.google.com/drive/folders/1Jw7D5H9yFjIiMA7mh6gjyoD7DAVy0o7S?usp=drive_link" class="btn btn-primary py-2 border-0">
                             <div class="d-flex gap-3 align-items-center">
-                                <p class="p-0 m-0" style="font-size: 13px;">View projects </p>
+                                <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View project</p>
                                 <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                             </div>
                           </a>
@@ -282,7 +282,7 @@
                 <div class="col-12 d-flex justify-content-center" style="margin-top: 50px;">
                     <a href="/works.html" class="btn btn-primary py-2 border-0">
                         <div class="d-flex gap-3 align-items-center">
-                            <p class="p-0 m-0" style="font-size: 13px;">View All projects </p>
+                            <p class="p-0 m-0" style="font-size: 13px; font-family: exo;">View All projects</p>
                             <img src="/images/view-project-icon.svg" alt="" style="height: 20px; width: 20px; background-color: white; border: 5px solid white; border-radius: 50%;">
                         </div>
                     </a>
@@ -298,7 +298,7 @@
     
         <div class="col-12 text-center">
             <div id="work-together">
-                <p style=" margin-top: -200px;" class="pt-5">Let’s Work Together</p>
+                <p style=" margin-top: -200px;" class="pt-5">Let’s Work T<img src="/images/BG1I-removebg-preview 1.png" alt="" style="height: 25px; width: 25px; border-radius: 50%; border: 5px solid #2C3E50;">gether</p>
                 <a href="/contact.html"><img src="/images/arrow-up-background.svg" alt="" height="50px"></a>
                 <a href="/contact.html"><img src="/images/arrow-up.svg" alt="" height="15px" class="img-home"></a>
             </div>
