--- a/works.html
+++ b/works.html
@@ -61,18 +61,16 @@
                 <div class="col-12 col-md-6">
                     <div class="wearluxe wearluxe-firstchild shadow">
                         <div class="border-0">
-                            <a href="https://drive.google.com/drive/folders/1Jw7D5H9yFjIiMA7mh6gjyoD7DAVy0o7S?usp=drive_link"><img src="/images/wearluxe-works.png" alt="Card image cap"></a>
+                            <a href="https://drive.google.com/drive/folders/1Jw7D5H9yFjIiMA7mh6gjyoD7DAVy0o7S?usp=drive_link" class="d-flex justify-content-center"><img src="/images/wearluxe-works.png" alt="Card image cap"></a>
                             <div>
-                                <h5>Wearluxe (web app)</h5>
-                                <div class="d-flex gap-3 buttons">
+                                <h5 class="ps-lg-5">Wearluxe (web app)</h5>
+                                <div class="d-flex gap-3 buttons ps-lg-5">
                                     <button style="border: 1px solid #555555;"><a href="">UI Design</a></button>
                                     <button style="border: 1px solid #555555;"><a href="">UX Design</a></button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
-                    
                 </div>
 
                 <div class="d-none d-md-block col-md-6">
@@ -96,7 +94,7 @@
                             <div>
                                 <h5>Up habit (mobile app)</h5>
                                 <div class="d-flex gap-3 buttons">
-                                    <button style="border: 1px solid #555555;"><a href="">UI Design</a></button>
+                                    <button style="border: 1px solid #555555;"><a href="https://drive.google.com/drive/folders/1k9-TPFNF3_RafRCxaqTBn_O9xEtybgoQ?usp=drive_link">UI Design</a></button>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +138,7 @@
                             <div>
                                 <h5>Meccafarms (mobile app)</h5>
                                 <div class="d-flex gap-3 buttons">
-                                    <button style="border: 1px solid #555555;"><a href="">UI Design</a></button>
+                                    <button style="border: 1px solid #555555;"><a href="https://drive.google.com/drive/folders/1NjwSaLGBNDkQxNuH3CqGRqOew5cnNlgA?usp=drive_link">UI Design</a></button>
                                 </div>
                             </div>
                         </div>
